--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -15,4 +15,6 @@ phases:
 # Include only the files required for your application to run.
 artifacts:
   files:
+    - appspec.yml
+    - scripts/**/*
     - dist/**/*
